Add flywheel roles
