# swagger/schemas/definitions/user.json
@@ -27,9 +27,10 @@
                           "type": "string",
                           "description": "Avatar image URL"
                         },
-    "root":             { 
-                          "type": "boolean",
-                          "description": "Super admin flag"
+    "role":             {
+                          "type": "string",
+                          "description": "User's role on the site",
+                          "enum": ["site-admin", "developer", "user"]
                         },
     "disabled":         { "type": "boolean"},
     "preferences":      {
@@ -57,7 +58,7 @@
         "email":{"$ref":"#/definitions/email"},
         "avatar":{"$ref":"#/definitions/avatar"},
         "avatars":{"$ref":"avatars.json#/definitions/avatars"},
-        "root":{"$ref":"#/definitions/root"},
+        "role":{"$ref":"#/definitions/role"},
         "disabled":{"$ref":"#/definitions/disabled"},
         "preferences":{"$ref":"#/definitions/preferences"},
         "wechat":{"$ref":"#/definitions/wechat"},
@@ -76,7 +77,7 @@
         "email":{"$ref":"#/definitions/email"},
         "avatar":{"$ref":"#/definitions/avatar"},
         "avatars":{"$ref":"avatars.json#/definitions/avatars"},
-        "root":{"$ref":"#/definitions/root"},
+        "role":{"$ref":"#/definitions/role"},
         "disabled":{"$ref":"#/definitions/disabled"},
         "preferences":{"$ref":"#/definitions/preferences"},
         "wechat":{"$ref":"#/definitions/wechat"},
@@ -98,7 +99,7 @@
         "email":{"$ref":"#/definitions/email"},
         "avatar":{"$ref":"#/definitions/avatar"},
         "avatars":{"$ref":"avatars.json#/definitions/avatars"},
-        "root":{"$ref":"#/definitions/root"},
+        "role":{"$ref":"#/definitions/role"},
         "disabled":{"$ref":"#/definitions/disabled"},
         "preferences":{"$ref":"#/definitions/preferences"},
         "wechat":{"$ref":"#/definitions/wechat"},
@@ -110,9 +111,9 @@
       "additionalProperties":false,
       "required":[
          "_id", "firstname", "lastname",
-         "root", "email", "created", "modified"
+         "role", "email", "created", "modified"
       ],
-      "x-sdk-model": "user"      
+      "x-sdk-model": "user"
     }
   }
 }
